spacing issue fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -136,6 +136,7 @@ nav ul {
   justify-content: space-between;
   align-items: center;
   padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .collage img {
